<resources>
    <string name="app_name">PR008CalculoPropina</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtCuenta">0.00</string>
    <string name="euro">€</string>
    <string name="cuenta">Cuenta</string>
    <string name="propina">Propina</string>
    <string name="porcentaje">% Prop.</string>
    <string name="simboloPorcentaje">%</string>
    <string name="calcular">Calcular</string>
    <string name="redondear">Redondear</string>
    <string name="limpiar">Limpiar</string>
</resources>
