<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/marginMoneda"
                android:layout_marginEnd="@dimen/marginMoneda">

                <TextView
                    android:id="@+id/lblCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/cuenta"
                    android:paddingRight="@dimen/paddingLblCuenta"
                    android:paddingEnd="@dimen/paddingLblCuenta"
                    android:paddingTop="@dimen/paddingLblCuenta"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView
                    android:id="@+id/lblMonedaCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txtCuenta"
                    android:layout_below="@+id/lblCuenta"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/tamanoMoneda"
                    android:text="@string/euro"/>
                <EditText
                    android:id="@+id/txtCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblCuenta"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/txtCuenta"
                    android:inputType="numberDecimal"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_toLeftOf="@+id/lblMonedaCuenta"
                    android:layout_toStartOf="@+id/lblMonedaCuenta"
                    android:gravity="end"
                    android:paddingLeft="@dimen/paddingTxtCuenta"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    />
                <TextView
                    android:id="@+id/lblPorcentaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtCuenta"
                    android:text="@string/porcentaje"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:paddingLeft="@dimen/paddingLeftPorcentaje"
                    android:paddingRight="@dimen/paddingRightPorcentaje"
                    />
                <TextView
                    android:id="@+id/lblPropina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/propina"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:layout_marginRight="@dimen/paddingLblCuenta"
                    android:layout_marginEnd="@dimen/paddingLblCuenta"
                    android:layout_alignBaseline="@+id/lblPorcentaje"
                    android:layout_alignRight="@+id/lblCuenta"
                    android:layout_alignEnd="@+id/lblCuenta"/>
                <TextView
                    android:id="@+id/lblMonedaPorcentaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblPorcentaje"
                    android:layout_alignRight="@+id/lblPorcentaje"
                    android:text="@string/simboloPorcentaje"
                    android:textSize="@dimen/tamanoMoneda"/>
                <EditText
                    android:id="@+id/txtPorcentajePropina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/lblMonedaPorcentaje"
                    android:layout_toStartOf="@+id/lblMonedaPorcentaje"
                    android:layout_alignBaseline="@+id/lblMonedaPorcentaje"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/txtCuenta"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    />


                <EditText
                    android:id="@+id/txtPropina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/lblMonedaPropina"
                    android:layout_toStartOf="@+id/lblMonedaPropina"
                    android:layout_alignBottom="@+id/txtPorcentajePropina"
                    android:layout_toRightOf="@+id/lblPorcentaje"
                    android:layout_toEndOf="@+id/lblPorcentaje"
                    android:text="@string/txtCuenta"
                    android:inputType="numberDecimal"
                    android:textAppearance="@android:style/TextAppearance.Large"

                    android:gravity="right"
                    style="@style/Base.TextAppearance.AppCompat.Headline"

                    />


                <TextView
                    android:id="@+id/MonedaTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:textSize="@dimen/tamanoMoneda"
                    android:layout_below="@id/lblMonedaPropina"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBaseline="@+id/txtTotal"
                    />
                <TextView
                    android:id="@+id/lblMonedaPropina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:textSize="@dimen/tamanoMoneda"
                    android:layout_below="@+id/lblMonedaCuenta"
                    android:layout_alignBaseline="@id/txtPropina"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />
                <EditText
                    android:id="@+id/txtTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/MonedaTotal"
                    android:layout_toStartOf="@id/MonedaTotal"
                    android:layout_below="@+id/txtPropina"
                    android:text="@string/txtCuenta"
                    android:inputType="numberDecimal"
                    android:gravity="right"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textAppearance="@android:style/TextAppearance.Large"/>

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/MonedaTotal"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/btnMargen"
                    android:layout_marginRight="@dimen/btnMargen"
                    android:layout_marginEnd="@dimen/btnMargen"
                    android:text="@string/calcular"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    />
                <Button
                    android:id="@+id/btnRedondear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/MonedaTotal"
                    android:layout_toLeftOf="@+id/btnCalcular"
                    android:layout_toStartOf="@+id/btnCalcular"
                    android:layout_marginTop="@dimen/btnMargen"
                    android:layout_marginRight="@dimen/btnMargen"
                    android:layout_marginEnd="@dimen/btnMargen"
                    android:text="@string/redondear"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"

                    />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/MonedaTotal"
                    android:layout_toLeftOf="@+id/btnRedondear"
                    android:layout_toStartOf="@+id/btnRedondear"
                    android:layout_marginTop="@dimen/btnMargen"
                    android:layout_marginRight="@dimen/btnMargen"
                    android:layout_marginEnd="@dimen/btnMargen"
                    android:text="@string/limpiar"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"

                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>

</ScrollView>
